--- a/unit_template.tex
+++ b/unit_template.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage{graphicx} % Required for inserting images
-\usepackage{float}   
-\usepackage{media9} 
+\usepackage{float}
+\usepackage{media9}
 \usepackage{xcolor}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -9,12 +9,20 @@
 \usepackage{hyperref}
 \usepackage{mathtools}
 \usepackage[justification=centering]{caption}
-\usepackage{tcolorbox}
+\usepackage[most]{tcolorbox}
 \usepackage{comment}
 \usepackage{tikz}
+\usepackage{parskip}
+\usepackage[tracking=true]{microtype}
+% fonts
+\usepackage[p,osf]{cochineal}
+\usepackage[scale=.95,type1]{cabin}
+\usepackage[cochineal,bigdelims,cmintegrals,vvarbb]{newtxmath}
+\usepackage[zerostyle=c,scaled=.94]{newtxtt}
+\usepackage[cal=boondoxo]{mathalfa}
 
 \newcommand{\todo}[1]{\textbf{\textcolor{red}{TODO: #1}}}
-\newtcolorbox{questionbox}{colback=blue!5!white,colframe=blue!75!black}
+\newtcolorbox{questionbox}{enhanced,colback=blue!5!white,colframe=blue!10,boxrule=0.5pt}
 
 \usepackage{soul}
 \definecolor{Light}{rgb}{1, 0.9, 0.9}
@@ -88,9 +96,9 @@
 \begingroup
 \centering
 \section*{The I2 Grimoire: {{UNIT}}}
-This is the {{UNIT}} unit of the I2 Grimoire book. Find the full book and other units on our website: \url{https://grimoire.uw-i2.org}.\break
+This is the {{UNIT}} unit of the I2 Grimoire book. Find the full book and other units on our website: \url{https://grimoire.uw-i2.org}.
 
-We are Interactive Intelligence, an organization of interdisciplinary thinkers that seek to probe intelligence through the intersection of AI, neuroscience, and related fields. This book serves as a launchpad for the basic theory that underlies major AI systems and covers five large (intersecting) spheres: Machine Learning, Deep Learning, Computer Vision, Reinforcement Learning, and Language Modeling. While by no means a thorough overview of any one of these fields, this book serves as a starting point that will paint a large picture in your mind about the five aforementioned topics. This book is written in layman's english, and introduces some complex (but core) math while explaining as much intuition behind it as possible. Regardless of your background, there is something interesting you will learn in these pages. Feel free to explore sections that interest you, backtracking if you encounter unfamiliar concepts. \break
+We are Interactive Intelligence, an organization of interdisciplinary thinkers that seek to probe intelligence through the intersection of AI, neuroscience, and related fields. This book serves as a launchpad for the basic theory that underlies major AI systems and covers five large (intersecting) spheres: Machine Learning, Deep Learning, Computer Vision, Reinforcement Learning, and Language Modeling. While by no means a thorough overview of any one of these fields, this book serves as a starting point that will paint a large picture in your mind about the five aforementioned topics. This book is written in layman's english, and introduces some complex (but core) math while explaining as much intuition behind it as possible. Regardless of your background, there is something interesting you will learn in these pages. Feel free to explore sections that interest you, backtracking if you encounter unfamiliar concepts.
 
 This book is a culmination of many months of work by very talented students from the University of Washington. It was entirely created by I2 members, and we hope that you enjoy what we have written on these pages and leave better equipped to navigate this world we share with AI algorithms.
 
