--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
 \usepackage{comment}
 \usepackage{tikz}
 \usepackage{parskip}
-\usepackage[tracking=true]{microtype}
+\usepackage{microtype}
 % fonts
 \usepackage[p,osf]{cochineal}
 \usepackage[scale=.95,type1]{cabin}
