--- a/unit_template.tex
+++ b/unit_template.tex
@@ -22,7 +22,7 @@
 \usepackage[cal=boondoxo]{mathalfa}
 
 \newcommand{\todo}[1]{\textbf{\textcolor{red}{TODO: #1}}}
-\newtcolorbox{questionbox}{enhanced,colback=blue!5!white,colframe=blue!10,boxrule=0.5pt}
+\newtcolorbox{questionbox}{enhanced,colback=blue!5!white,colframe=blue!10,boxrule=0.5pt,parbox=false}
 
 \usepackage{soul}
 \definecolor{Light}{rgb}{1, 0.9, 0.9}
