--- a/lm.tex
+++ b/lm.tex
@@ -520,7 +520,32 @@ This process ensures that language models respond appropriately to complex or se
 
 RLHF is a critical tool for enhancing the usability and safety of large language models, enabling them to deliver high-quality, aligned outputs in complex real-world applications.
 
+\subsection{Learning to Reason through RLVR}
 
+\textbf{RLVR (Reinforcement Learning with Verifiable Rewards)} has demonstrated significant improvements in reasoning tasks such as mathematics, programming, and scientific problem-solving. The key idea is to cast reasoning as a Reinforcement Learning (RL) problem, where the model learns not just to generate text, but to optimize a verifiable objective.  
+
+In RLVR, the components map as follows:  
+\begin{itemize}
+    \item \textbf{State}: the input question together with the current reasoning chain (the partial solution built so far).  
+    \item \textbf{Action}: the next token or step in the reasoning process.  
+    \item \textbf{Policy}: the model’s distribution over possible next actions (tokens).  
+    \item \textbf{Trajectory}: the full reasoning chain from start to final answer.  
+    \item \textbf{Reward}: assigned at the end, typically a binary signal indicating whether the final answer is correct.  
+\end{itemize}
+
+A simplified recipe for RLVR training looks like this:  
+\begin{enumerate}
+    \item \textbf{Initialize} with a base reasoning model (often trained with supervised learning or chain-of-thought data).  
+    \item \textbf{Roll out reasoning chains}: collect a dataset of problems with known solutions, and have the model generate candidate solutions step by step.  
+    \item \textbf{Verify answers}: use automated checkers to determine correctness.  
+    \item \textbf{Assign rewards}: correct answers get a positive reward; incorrect ones get little or none.  
+    \item \textbf{Policy update}: use an RL algorithm to adjust the model so that reasoning paths leading to correct answers become more likely.  
+    \item \textbf{Repeat}: over many iterations, the model learns to allocate more compute toward productive reasoning chains.  
+\end{enumerate}
+
+This RL framing enables scaling of \textbf{Test-Time Compute}---the computational effort spent on reasoning after training. Increasing this ``thinking effort'' (longer chains, deeper rollouts) generally improves performance, though at the cost of slower inference. This explains why ``thinking models'' feel slower: they are effectively exploring longer reasoning trajectories at test time.  
+
+For a deeper discussion of this approach, see the \href{https://arxiv.org/abs/2501.12948}{DeepSeek R1 paper}.  
 
 \begin{questionbox}
 \textbf{Synthesis Questions:}
