--- a/unit_template.tex
+++ b/unit_template.tex
@@ -4,7 +4,7 @@
 \usepackage{media9}
 \usepackage{xcolor}
 \usepackage{amsmath}
-\usepackage{amsfonts}
+% \usepackage{amsfonts}
 \usepackage{geometry}[0.05in]
 \usepackage{hyperref}
 \usepackage{mathtools}
