center the image

--- a/unit_template.tex
+++ b/unit_template.tex
@@ -106,7 +106,9 @@ This book is a culmination of many months of work by very talented students from
 \subsection*{Additional Information}
 This book was written to pair with the Interactive Intelligence intro to NeuroAI course, which lives here: \href{https://course.uw-i2.org/}{Interactive Intelligence Intro to NeuroAI Course Website}. There are questions associated with some sections, which serve as optional exercises for you to test your understanding. If you have questions or comments on the information in this book, please contact \href{mailto:varunananth1@gmail.com}{\texttt{varunananth1@gmail.com}} \\
 \vspace{1cm}
+\begin{center}
 \includegraphics[scale=0.3]{other/i2-brain.png}
+\end{center}
 \endgroup
 
 \newpage
