--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
 \usepackage{comment}
 \usepackage{tikz}
 \usepackage{parskip}
-\usepackage{microtype}
+\usepackage[activate={true,nocompatibility},final,tracking=true,kerning=true,spacing=true,factor=1100,stretch=10,shrink=10]{microtype}
 % fonts
 \usepackage[p,osf]{cochineal}
 \usepackage[scale=.95,type1]{cabin}
