disable centering for figure captions, harder to read

--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 \usepackage{geometry}[0.05in]
 \usepackage{hyperref}
 \usepackage{mathtools}
-\usepackage[justification=centering]{caption}
+\usepackage{caption}
 \usepackage[most]{tcolorbox}
 \usepackage{comment}
 \usepackage{tikz}
